--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
-  font-family: 'Gotham Bold Regular', monospace;
+  font-family: 'Gotham Bold Regular', sans-serif;
 }
 h1 {
   font-size: 2.21em;
@@ -256,7 +256,7 @@ a:visited {
 
 /*
 .overlay #close {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Roboto Mono', sans-serif;
   background: var(--body-color);
   border-radius: 1em;
   -moz-border-radius: 1em;
