--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* vars */
 :root {
   --background-color: #ffffff;
-  --link-color: #E2E3E3;
+  --link-color: #F2243c;
   --alt-link-color: #111;
   --body-color: #111111;
   --light-grey: #A9AAAA;
